[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
aoc-runner = {version = "0.3.0", optional = true}
aoc-runner-derive = {version = "0.3.0", optional = true }

[features]
day01 = []
day02 = []
day03 = []
day04 = []
day05 = []
day06 = []
day07 = []
day08 = []
day09 = []
day10 = []
alldays = ["day01", "day02", "day03", "day04", "day05", "day06", "day07", "day08", "day09", "day10"]
my_aoc_runner = ["dep:aoc-runner", "dep:aoc-runner-derive", "alldays"]
default = ["day10", "my_aoc_runner"]

[lib]
doctest = false
